styled what we do section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </section>
 
         <!-- "what we do" section -->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, sequi? Pariatur nulla ea atque quia sed quibusdam magnam laudantium totam eaque officiis? A officia dignissimos, nulla saepe minima quisquam consequatur?
