--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
 
         <!-- "what we do" section -->
         <section id="what-we-do" class="intro">
-            <h2>What We Do</h2>
+            <h2 class="section-title primary-border">What We Do</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, sequi? Pariatur nulla ea atque quia sed quibusdam magnam laudantium totam eaque officiis? A officia dignissimos, nulla saepe minima quisquam consequatur?
             </p>
         </section>
 
         <!-- "what you do" section -->
-        <section id="what-you-do">
-            <h2>What You Do</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: Fill out the form above.</h3>
+                <h3>Step 1:<span> Fill out the form above.</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
