--- a/index.html
+++ b/index.html
@@ -108,8 +108,40 @@
         </section>
 
         <!-- "meet the trainers" section -->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Stength</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed blanditiis eveniet in dolorum magnam repellat molestias perspiciatis quae tenetur quod corrupti, nobis reiciendis neque tempora error quasi iure dolor minima.
+                    </p>
+                </div>
+            </article>
+
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, deleniti? Natus voluptatibus nam molestias soluta totam placeat pariatur dolorum architecto minima excepturi. Provident harum perferendis officiis facere, aut ratione neque.
+                    </p>
+                </div>
+                <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout." />
+            </article>
+
+            <article class="trainer">
+                <img src="assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights." />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae accusantium perferendis ex, iste porro, nostrum iusto est nobis dolorem fuga sint eveniet nam odio asperiores sunt totam ipsum quasi repellat!
+                    </p>
+                </div>
+            </article>
 
         </section>
 
