--- a/index.html
+++ b/index.html
@@ -149,8 +149,12 @@
         <section id="reach-out" class="contact">
             <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2873.642059806331!2d-78.69911278487582!3d43.925384179112896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d50725d55f16c7%3A0x6c98e9320622ea00!2s70%20Longworth%20Ave%2C%20Bowmanville%2C%20ON!5e0!3m2!1sen!2sca!4v1626554012208!5m2!1sen!2sca" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
+                <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2873.642059806331!2d-78.69911278487582!3d43.925384179112896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d50725d55f16c7%3A0x6c98e9320622ea00!2s70%20Longworth%20Ave%2C%20Bowmanville%2C%20ON!5e0!3m2!1sen!2sca!4v1626554012208!5m2!1sen!2sca"
+                style="border:0;"
+                 allowfullscreen="" 
+                 loading="lazy">
+                </iframe>
             <div>
                 <h3> Run Buddy</h3>
                 <p>
@@ -161,10 +165,11 @@
                 <address>
                     55 Main Street <br/>
                     Some Town, Ca <br/>
-                    12345 <br/>
+                    12345<br/>
                     P: 555.RUN.BUDZ (555.786.2837) <br/>
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                 </address>
+            </div>
             </div>
         </section>
     </body>
