--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
        
         <!-- hero/jumbotron -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, maiores fugiat! Veritatis odio recusandae autem officia tenetur aperiam. Accusamus adipisci sequi alias eos corrupti ullam pariatur et vero amet nisi.
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
